--- a/ttrpg-app/src/pages/dungeon/components/dungeon.module.scss
+++ b/ttrpg-app/src/pages/dungeon/components/dungeon.module.scss
@@ -2,10 +2,10 @@
 
 @import '../../../theme.scss';
 
-.dungeon-display {
+.display {
   padding: theme-spacing(2);
 }
 
-.dungeon-loading {
+.loading {
   padding: theme-spacing(4);
 }
