--- a/ttrpg-app/src/pages/dungeon/components/input-row.module.scss
+++ b/ttrpg-app/src/pages/dungeon/components/input-row.module.scss
@@ -2,6 +2,6 @@
 
 @import '../../../theme.scss';
 
-.dungeon-inputRow + .dungeon-inputRow {
+.inputRow + .inputRow {
   margin-top: theme-spacing(2);
 }
