--- a/ttrpg-app/src/pages/ogl/page.module.scss
+++ b/ttrpg-app/src/pages/ogl/page.module.scss
@@ -2,7 +2,7 @@
 
 @import '../../theme.scss';
 
-.ogl-license-page p {
+.page p {
   margin-top: theme-spacing(1);
   margin-bottom: theme-spacing(1);
 }
