--- a/ttrpg-app/src/components/header.module.scss
+++ b/ttrpg-app/src/components/header.module.scss
@@ -2,10 +2,10 @@
 
 @import '../theme.scss';
 
-.header-spacer {
+.headerSpacer {
   flex-grow: 1;
 }
 
-.nav-menu .MuiListItemText-root {
+.navMenu :global(.MuiListItemText-root) {
   padding-right: theme-spacing();
 }
