--- a/ttrpg-app/src/pages/dungeon/components/select-row.module.scss
+++ b/ttrpg-app/src/pages/dungeon/components/select-row.module.scss
@@ -1,5 +1,5 @@
 /* SPDX-License-Identifier: MIT */
 
-.dungeon-selectRow .MuiTextField-root {
+.selectRow :global(.MuiTextField-root) {
   width: 100%;
 }
